force-app/main/default/objects/L3DB_Total_Case__c/L3DB_Total_Case__c.object-meta.xml
<CustomObject>
    <label>L3DB_Total_Case</label>
    <nameField>
        <label>L3DB_Total_Case Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>L3DB_Total_Cases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>