force-app/main/default/objects/L3DB_Total_Case__c/fields/C_O__c.field-meta.xml
<CustomField>
    <fullName>C_O__c</fullName>
    <label>C/O</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>