force-app/main/default/objects/L3DB_Total_Case__c/fields/Month__c.field-meta.xml
<CustomField>
    <fullName>Month__c</fullName>
    <label>Month</label>
    <length>4</length>
    <type>Text</type>
</CustomField>