force-app/main/default/objects/L3DB_Total_Case__c/fields/timeZone__c.field-meta.xml
<CustomField>
    <fullName>timeZone__c</fullName>
    <formula>TEXT((DATETIMEVALUE(TEXT(TODAY())+&quot; 00:00:00&quot;) - NOW()))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>timeZone</label>
    <type>Text</type>
</CustomField>